...
                    },
                    modifier = Modifier.size(24.dp)
                ) {
                    val isLiked = post.likes?.contains(currentUserId) == true
                    Icon(
                        imageVector = Icons.Default.Favorite,
                        contentDescription = "Dar like",
                        tint = if (isLiked) Color.Red else Color(0xFF2A2A2A)
                    )
                }

                Text("Comentarios", color = Color.Gray)
            }
...
