...
                    .padding(horizontal = 20.dp, vertical = 10.dp),
                horizontalArrangement = Arrangement.SpaceBetween,
                verticalAlignment = Alignment.CenterVertically
            ) {
                Text(
                    /// discover new concertss
                    text = "Descubre nuevos conciertos",
                    color = Color(0xFF5C0F1A),
                    fontWeight = FontWeight.SemiBold,
                    fontSize = 16.sp
                )

                IconButton(onClick = { nav.navigate("concertsList") }) {
                    Icon(
                        imageVector = Icons.Default.ArrowForward,
                        contentDescription = "Ver más conciertos",
                        tint = Color(0xFF5C0F1A)
                    )
                }
            }

            if (concerts.isEmpty()) {
...
