...
    val relatedConcerts = emptyList<Concerts>()
    val users = userVM.listaUsers
    val confirmedAttendees = concertVM.getConfirmedUsers(concert, users)
    val context = LocalContext.current
    val displayDateTime = try {
        val parsed = OffsetDateTime.parse(concert.date)
        val formatter = DateTimeFormatter.ofPattern("d 'de' MMMM yyyy - HH:mm", Locale("es", "ES"))
        parsed.format(formatter)
    } catch (e: Exception) {
        "${concert.date.take(10).replace("-", " de ")}"
    }

    val hasIncompleteInfo = concert.description.isNullOrBlank() ||
...
            colors = CardDefaults.cardColors(containerColor = BurgundyDark),
            elevation = CardDefaults.cardElevation(defaultElevation = 4.dp)
        ) {
            Column(modifier = Modifier.padding(16.dp)) {

                Text(
                    text = "Eventos relacionados",
                    fontSize = 16.sp,
                    fontWeight = FontWeight.Bold,
                    fontFamily = InterFontFamily,
                    color = Color.White
                )

...
                    modifier = Modifier.fillMaxWidth(),
                    colors = ButtonDefaults.outlinedButtonColors(contentColor = Color.White),
                    border = BorderStroke(1.5.dp, Color.White),
                    shape = RoundedCornerShape(50.dp)
                ) {
                    Text(
                        text = "Crear evento relacionado",
                        modifier = Modifier.padding(vertical = 8.dp),
                        fontSize = 16.sp,
                        fontFamily = InterFontFamily,
                        fontWeight = FontWeight.Bold
                    )
                }
...
        Column(
            modifier = Modifier
                .fillMaxWidth()
                .padding(horizontal = 16.dp)
        ) {
            Text(
                text = "Usuarios que confirmaron su asistencia",
                fontSize = 16.sp,
                fontWeight = FontWeight.Bold,
                fontFamily = InterFontFamily,
                color = BurgundyDark
            )

...
